第一次提交

--- a/.gitignore
+++ b/.gitignore
@@ -9,7 +9,11 @@
 /[Bb]uilds/
 /[Ll]ogs/
 /[Uu]ser[Ss]ettings/
-
+/[Pp]ackages/
+/[Ii]gnore.conf
+.plastic/
+.vsconfig
+Assets/Mirror/
 # MemoryCaptures can get excessive in size.
 # They also could contain extremely sensitive data
 /[Mm]emoryCaptures/
